--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: ShinobiTools
 Type: Package
-Title: Hands on functions for daily data manipulation that all shinobi needs
+Title: Hands-On R functions for daily data manipulation that every shinobi needs
 Version: 0.1.0
 Author: person("Nascimento", "Willber", email = "nascimentowillber@gamil.com",
   role = c("aut", "cre"))
@@ -14,6 +14,7 @@ BugReports: https://github.com/willbernascimento/ShinobiTools/issues
 Encoding: UTF-8
 LazyData: true
 Imports:
+    utils,
     dplyr,
     ggplot2,
     ggthemes,
